@@ -1,7 +1,7 @@
 /* Archimedes Tracker module loader for xmp
  * Copyright (C) 2007 Claudio Matsuoka
  *
- * $Id: arch_load.c,v 1.3 2007-08-22 23:02:26 cmatsuoka Exp $
+ * $Id: arch_load.c,v 1.4 2007-08-23 03:50:18 cmatsuoka Exp $
  *
  * This file is part of the Extended Module Player and is distributed
  * under the terms of the GNU General Public License. See doc/COPYING
@@ -17,8 +17,29 @@
 #include "period.h"
 
 static int year, month, day;
-static int pflag, sflag;
+static int pflag, sflag, max_ins;
 static uint8 ster[8], rows[64];
+static int8 *sbuf[36];
+
+
+static int8 table[128] = {
+	/*   0 */	  0,   0,   0,   0,   0,   0,   0,   0,
+	/*   8 */	  0,   0,   0,   0,   0,   0,   0,   0,
+	/*  16 */	  0,   0,   0,   0,   0,   0,   0,   0,
+	/*  24 */	  1,   1,   1,   1,   1,   1,   1,   1,
+	/*  32 */	  1,   1,   1,   1,   2,   2,   2,   2,
+	/*  40 */	  2,   2,   2,   2,   3,   3,   3,   3,
+	/*  48 */	  3,   3,   4,   4,   4,   4,   5,   5,
+	/*  56 */	  5,   5,   6,   6,   6,   6,   7,   7,
+	/*  64 */	  7,   8,   8,   9,   9,  10,  10,  11,
+	/*  72 */	 11,  12,  12,  13,  13,  14,  14,  15,
+	/*  80 */	 15,  16,  17,  18,  19,  20,  21,  22,
+	/*  88 */	 23,  24,  25,  26,  27,  28,  29,  30,
+	/*  96 */	 31,  33,  34,  36,  38,  40,  42,  44,
+	/* 104 */	 46,  48,  50,  52,  54,  56,  58,  60,
+	/* 112 */	 62,  65,  68,  72,  77,  80,  84,  91,
+	/* 120 */	 95,  98, 103, 109, 114, 120, 126, 127
+};
 
 static void fix_effect(struct xxm_event *e)
 {
@@ -155,7 +176,7 @@ static void get_patt(int size, FILE *f)
 			event->note = read8(f);
 
 			if (event->note)
-				event->note += 24;
+				event->note += 36;
 
 			fix_effect(event);
 		}
@@ -163,6 +184,31 @@ static void get_patt(int size, FILE *f)
 
 	i++;
 	reportv(0, ".");
+}
+
+/*
+ * From the Audio File Formats (version 2.5)
+ * Submitted-by: Guido van Rossum <guido@cwi.nl>
+ * Last-modified: 27-Aug-1992
+ *
+ * The Acorn Archimedes uses a variation on U-LAW with the bit order
+ * reversed and the sign bit in bit 0.  Being a 'minority' architecture,
+ * Arc owners are quite adept at converting sound/image formats from
+ * other machines, and it is unlikely that you'll ever encounter sound in
+ * one of the Arc's own formats (there are several).
+ */
+
+static void convert(int8 *buf, int len)
+{
+	int i;
+	uint8 x;
+
+	for (i = 0; i < len; i++) {
+		x = buf[i];
+		buf[i] = table[x >> 1];
+		if (x & 0x01)
+			buf[i] *= -1;
+	}
 }
 
 static void get_samp(int size, FILE *f)
@@ -175,6 +221,7 @@ static void get_samp(int size, FILE *f)
 		reportv(0, "\nInstruments    : %d ", xxh->ins);
 	        reportv(1, "\n     Instrument name      Len   LBeg  LEnd  L Vol");
 		sflag = 1;
+		max_ins = 0;
 		i = 0;
 	}
 
@@ -196,6 +243,7 @@ static void get_samp(int size, FILE *f)
 	xxs[i].lpe = read32l(f);
 	read32l(f);	/* SDAT */
 	read32l(f);
+	read32l(f);	/* 0x00000000 */
 
 	xxih[i].nsm = 1;
 	xxi[i][0].sid = i;
@@ -206,8 +254,12 @@ static void get_samp(int size, FILE *f)
 		xxs[i].lpe = xxs[i].lps + xxs[i].lpe;
 	}
 
-	xmp_drv_loadpatch(f, xxi[i][0].sid, xmp_ctl->c4rate, 0,
-					&xxs[xxi[i][0].sid], NULL);
+	sbuf[i] = malloc(xxs[i].len);
+	fread(sbuf[i], 1, xxs[i].len, f);
+	convert(sbuf[i], xxs[i].len);
+
+	xmp_drv_loadpatch(NULL, xxi[i][0].sid, xmp_ctl->c4rate,XMP_SMP_NOLOAD,
+					&xxs[xxi[i][0].sid], (char *)sbuf[i]);
 
 	if (strlen((char *)xxih[i].name) || xxs[i].len > 0) {
 		if (V(1))
@@ -223,11 +275,13 @@ static void get_samp(int size, FILE *f)
 	}
 
 	i++;
+	max_ins++;
 }
 
 int arch_load(FILE *f)
 {
 	char magic[4];
+	int i;
 
 	LOAD_INIT ();
 
@@ -262,6 +316,9 @@ int arch_load(FILE *f)
 	reportv(0, "\n");
 
 	iff_release();
+
+	for (i = 0; i < max_ins; i++)
+		free(sbuf[i]);
 
 	return 0;
 }
